3.3.0 b581
* backend code changes; removed star imports and a few small optimizations